error fix&new table&api add
